<resources>
    <!--String whid name of database-->
    <string name="database_value">DataBase-v1</string>

    <string name="app_name">Games&amp;News</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>
    <string name="publicador">Publicadora</string>
    <string name="pretitle_rating">Rating</string>
    <string name="pretitle_data_insercao">Data Lançado</string>
    <!-- Strings related to menus -->
    <string name="button_search">Procurar</string>
    <string name="button_sort">Ordenar</string>
    <string name="fragment_header">Fragmento do header da app</string>
    <string name="title_activity_test1">Test1</string>
    <string name="button_add">Adicionar Chat</string>
    <string name="button_fav">Favoritos</string>
    <string name="pretitle_data_registo">Data:</string>
    <string name="pretitle_email">Email:</string>
    <string name="dialog_add_noticia_title">Add News</string>
    <string name="hint_titulo_noticia">Título da notícia</string>
    <string name="hint_conteudo_noticia">Conteudo da Noticia</string>
    <string name="button_confirm">Confirmar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="dialog_game">List</string>
    <string name="button_close">Fechar</string>
    <string name="button_admin">Admin</string>
    <string name="button_add_store">Add Store</string>
    <string name="button_store">Edit Store</string>
    <string name="hint_description_game">Game Description</string>
    <string name="hint_titulo_game">Game Title</string>
    <string name="hint_game_publicher">Game Publicher</string>
    <string name="dialog_add_game_title">Add Game</string>
    <string name="pretitle_game_name">Nome do Jogo</string>
    <string name="pretitle_number_gamers">Numero de Jogadores</string>
    <string name="button_edit">Editar:</string>
    <string name="pretitle_descricao">Descrição</string>
    <string name="button_activate_favorito">Adicionar Favorito</string>
    <string name="button_avaliar">Avaliar</string>
    <string name="button_lojas">Lojas</string>
    <string name="pretitle_publicher">Publicadora</string>
    <string name="button_logout">Logout</string>
    <string name="dialog_add_chat_title">Add Chat</string>
    <string name="hint_titulo_chat">Titulo Chat</string>
    <string name="hint_descricao_chat">Descricao</string>
    <string name="procurar">Procurar</string>
    <string name="hint_procurar">Procura...</string>
    <string name="ordenar">Ordenar</string>
    <string name="button_byDate">By Date</string>
    <string name="button_byName">By Name</string>
    <string name="button_byID">By Date</string>
    <string name="hint_titulo_store">Nome da Loja</string>
    <string name="dialog_add_store_title">Add Store</string>
    <string name="hint_description_store">Descricao da Loja</string>
    <string name="hint_game_store">Dono</string>
    <string name="button_eddit_user">Editar Utilizador</string>
    <string name="button_edit_store">Editar Loja</string>
    <string name="button_add_games">Adicionar Jogos</string>
    <string name="button_edit_games">Editar preços</string>
    <string name="user_name">Nome</string>
    <string name="change_image">Mudar Imagem</string>
    <string name="edit_email">Editar Email</string>
    <string name="edit_passe">Editar Passe</string>
    <string name="edit_passe_confirm">Confirmar Passe</string>
    <string name="button_definition">Definições</string>
    <string name="pretitle_store_name">Nome da Loja</string>
    <string name="pretitle_morada">Morada</string>
    <string name="Name_App">Nome na App</string>
    <string name="name_user">UserName</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="navigation_open">Open drawer</string>
    <string name="navigation_close">Close drawer</string>
    <string name="msg_async_task_loading_login">A autenticar</string>
    <string name="notification_add_chat_title">Novo chat adicionado.</string>
    <string name="notification_add_jogo_title">Novo jogo adicionado.</string>
    <string name="notification_add_loja_title">Nova loja adicionada.</string>
    <string name="msg_no_internet">É necessária conexão à internet para utilizar esta app</string>
    <string name="title_no_internet">Conexão à internet perdida</string>
    <string name="button_retry">Voltar a tentar</string>
    <string name="dialog_add_mensage_title">Adicionar Mensagem</string>
    <string name="hint_mengage_content">Conteudo</string>
    <string name="button_byStaderd">By Standerd</string>
    <string name="button_byRating">By Rating</string>
</resources>