<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_definitions"
        android:icon="@drawable/baseline_settings_white_24dp"
        android:title="@string/button_definition"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_white_24dp"
        android:title="@string/button_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/outline_reorder_white_24dp"
        android:title="@string/button_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_item_menu_main"
        android:title="@string/button_add"
        app:showAsAction="never" />

</menu>