<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorItemBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/tituloTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_noticia_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:padding="20dp"/>


        <EditText
            android:id="@+id/tituloEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titulo_noticia"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/conteudoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_conteudo_noticia"
            android:inputType="textMultiLine"
            android:lines="@integer/min_lines_long_edittext"
            android:minLines="@integer/min_lines_long_min"
            android:gravity="top|left"
            android:maxLines="@integer/max_lines_long_edittext"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_add_noticia"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom_small"
                android:text="@string/button_confirm"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom_small"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>