<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/default_games"
                android:padding="@dimen/dialog_open_image_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_nomeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/pretitle_game_name" />

                <TextView
                    android:id="@+id/nomeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_dataInsercaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/pretitle_data_insercao" />

                <TextView
                    android:id="@+id/dataInsercaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_ratingTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/pretitle_rating" />

                <TextView
                    android:id="@+id/ratingTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_numberOfGamers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/pretitle_number_gamers" />

                <TextView
                    android:id="@+id/numberOfGamers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />

                <Button
                    android:id="@+id/button_edit_numberGames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_buttom_small"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/button_edit_number_marginleft"
                    android:text="@string/button_edit"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_descricaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/pretitle_descricao" />

                <TextView
                    android:id="@+id/descricaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_publicherTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/pretitle_publicher" />

                <TextView
                    android:id="@+id/publicherTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button_favorito"
                    android:layout_width="@dimen/dialog_button_confirm_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttom_small"
                    android:text="@string/button_activate_favorito"/>

                <Button
                    android:id="@+id/button_avaliar"
                    android:layout_width="@dimen/dialog_button_cancel_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttom_small"
                    android:text="@string/button_avaliar"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">


                <Button
                    android:id="@+id/button_lojas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttom_small"
                    android:text="@string/button_lojas"/>


                <Button
                    android:id="@+id/button_cancelBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttom_small"
                    android:text="@string/button_close" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>