<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorItemBackground"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tituloTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_search"
                android:layout_width="@dimen/dialog_button_confirm_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_buttom_small"
                android:text="@string/button_search"/>


            <Button
                android:id="@+id/button_close"
                android:layout_width="@dimen/dialog_button_cancel_width"
                android:background="@drawable/custom_buttom_small"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_close" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>