<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorItemBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/loja_default"
                android:padding="@dimen/dialog_open_image_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_nomeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/pretitle_store_name" />

                <TextView
                    android:id="@+id/nomeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <TextView
                    android:id="@+id/pretitle_descricaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/pretitle_descricao" />

                <TextView
                    android:id="@+id/descricaoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dialog_open_padding"
                android:layout_margin="@dimen/dialog_open_margin">


                <Button
                    android:id="@+id/pretitle_moradaTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:text="@string/pretitle_morada" />

                <TextView
                    android:id="@+id/moradaTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/button_cancelBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_close" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>